--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,14 @@
     <string name="action_options">Options</string>
     <string name="action_about">About</string>
     <string name="button_play">Start Game</string>
+    <string name="title_activity_options">Options</string>
+
+    <!-- Options Menu -->
+    <string name="label_difficulty">Difficulty:</string>
+    <string name="radio_button_easy">Easy</string>
+    <string name="radio_button_hard">Hard</string>
+    <string name="label_minimum_letters">Minimum Word Length:</string>
+    <string name="label_maximum_letters">Maximum Word Length:</string>
+    <string name="button_save">Save</string>
+    <string name="button_cancel">Cancel</string>
 </resources>
