Save state on orientation change, button functions
State is saved on orientation changed, inputed values are not lost.

Basic functionality for the buttons. Cancel returns back to main, save
just triggers a snackbar.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_activity_options">Options</string>
 
     <!-- Options Menu -->
+    <string name="options_title">Options</string>
     <string name="label_difficulty">Difficulty:</string>
     <string name="radio_button_easy">Easy</string>
     <string name="radio_button_hard">Hard</string>
