--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
     <string name="error_range_minLength">Minimum word length must be 3, or greater.</string>
     <string name="error_range_maxLength">Maximum word length must be greater than or equal to minimum word length.</string>
     <string name="options_success">Options Saved</string>
+
+    <!-- Game -->
+    <string name="button_onclick">checkForLetter</string>
 </resources>
