Add subtitle, tweak constraints

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <!-- Global -->
     <string name="app_name">Hangman!</string>
+    <string name="subtitle">Guess the word, save the man!</string>
 
     <!-- Main Menu -->
     <string name="action_options">Options</string>
